<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_daily_recommendation"
        android:name="com.example.myapplication2.ui.gallery.DailyRecommendation"
        android:label="@string/daily_recommendation"
        tools:layout="@layout/daily_recommendation_fragment" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.myapplication2.ui.slideshow.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite" />
    <fragment
        android:id="@+id/myIngrediants"
        android:name="com.example.myapplication2.ui.MyIngrediants"
        android:label="@string/my_ingredients"
        tools:layout="@layout/fragment_my_ingredients" />
</navigation>