<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WelcomeActivity">


 <ImageView

     android:foreground="@drawable/foreground_bg2"
     android:id="@+id/ImageView2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scaleType="centerCrop"
     android:src="@drawable/bg" />

 <TextView
     android:id="@+id/TextView2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fontFamily="@font/lobster"
     android:text="@string/mysushi"
     android:textAlignment="center"
     android:textColor="@color/white"
     android:textSize="33sp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="@+id/ImageView2"
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.4" />

 <TextView
     android:id="@+id/TextView3"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
  android:text="@string/explore_your_recipes"
  android:textAlignment="center"
  android:textStyle="bold"
  android:textColor="@color/white"
  app:layout_constraintEnd_toEndOf="parent"
  app:layout_constraintStart_toStartOf="parent"
  app:layout_constraintTop_toBottomOf="@+id/TextView2"
  />

 <Button
     android:onClick="mainActivity"
     android:layout_width="185dp"
     android:layout_height="50dp"
     android:padding="14dp"
     android:text="@string/get_started"
     android:textStyle="bold"
     android:textAllCaps="false"
     android:textColor="@color/white"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.9"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/TextView3"
     app:layout_constraintVertical_bias="0.9"
     app:layout_constraintWidth_percent=".8"
     android:background="@drawable/btn_bg_design" />


</android.support.constraint.ConstraintLayout>